2005-04-24  Erik Hjortsberg  <erik@katastrof.nu>

	* Change method signatures to conform with latest Eris.

2005-04-24  Erik Hjortsberg  <erik@katastrof.nu>

	* Use version 1.0.1 of Ogre.
	* Rearranged library checking order, so more meaningful messages are produces for missing libs.

2005-04-11  Erik Hjortsberg  <erik@katastrof.nu>

	* changed the default grass texture
	* increased the default max pixel error
	* fix for the make_dist_media script; make it find the material files

2005-04-11  Erik Hjortsberg  <erik@katastrof.nu>

	* wait with inclusion of FoliageArea until it at least compiles

2005-04-11  Erik Hjortsberg  <erik@katastrof.nu>

	* removed unecessary include from GUIManager.h
	* add binreloc support to EmberOgre.cpp

2005-04-11  Erik Hjortsberg  <erik@katastrof.nu>

	* Require eris 1.3.4 because of changes to the Connection API.
	* Use binreloc for relocatable binaries.

2005-04-09  Erik Hjortsberg  <erik@katastrof.nu>

	* Modified connect code to fit with changes in eris.

2005-03-31  Erik Hjortsberg  <erik@katastrof.nu>

	* Fixed a bug which resulted in the starting block not being added to the list of attached blocks, and thus not being saved.

2005-03-31  Erik Hjortsberg  <erik@katastrof.nu>

	* Added columns from building_elements

2005-03-31  Erik Hjortsberg  <erik@katastrof.nu>

	* Use the S_LOG* macros.
	* Name the window "Ember"
	* Commented out the sound test where it tries to open /dev/dsp since that made Ember lock up completely on my box when something else was accessing the sound device.

2005-03-31  Erik Hjortsberg  <erik@katastrof.nu>

	* Fixes to static build. (though I can't really get it to work)

2005-03-31  Erik Hjortsberg  <erik@katastrof.nu>

	* save screen shots to ~/.ember/screenshots
	* Use the S_LOG* macros.
	

2005-03-31  Erik Hjortsberg  <erik@katastrof.nu>

	* Added a reference in Model to the ModelDefinition used
	* Added datatype and parsing of Sounds attached to an Action.
	* Use the S_LOG* macros.
