@@ -1,6 +1,7 @@
 <?xml version="1.0" ?>
 <GUIScheme Name="TaharezLook">
 	<Imageset Name="TaharezLook" Filename="cegui/datafiles/imagesets/TaharezLook.imageset" />
+	<Imageset Name="TaharezLookMouse" Filename="cegui/datafiles/imagesets/TaharezLookMouse.imageset" />
 	<Font Name="Tahoma-14" Filename="cegui/datafiles/fonts/tahoma-14.xml" />
 	<Font Name="Tahoma-10" Filename="cegui/datafiles/fonts/tahoma-10.xml" />
 	<Font Name="Tahoma-8" Filename="cegui/datafiles/fonts/tahoma-8.xml" />
